--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -5,6 +5,7 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 application-*.properties
+textbook-exchange-backend.pem
 
 ### STS ###
 .apt_generated
