--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,9 +1,13 @@
 spring.application.name=TextbookExchange
 
+spring.config.import=classpath:application-secret.properties
+
 # PostgreSQL DB config
-spring.datasource.url=jdbc:postgresql://localhost:5432/textbook_exchange
-spring.datasource.username=postgres
-spring.datasource.password=12226578
+spring.datasource.url=jdbc:postgresql://textbook-exchange.cncy02qcoyo4.us-east-2.rds.amazonaws.com:5432/textbook-exchange
+spring.datasource.username=esaunders
+spring.datasource.password=${AWS_PASSWORD}
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
 
 # Hibernate & JPA
 spring.jpa.hibernate.ddl-auto=update
@@ -21,6 +25,5 @@ spring.flyway.unknown-database-version-handling=ignore
 spring.sql.init.mode=always
 
 #Security Keys
-spring.config.import=classpath:application-secret.properties
 JWT_SECRET=${JWT_SECRET}
 EXPIRATION_TIME=${EXPIRATION_TIME}
