Started email verfication

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.esaunders</groupId>
 	<artifactId>TextbookExchange</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>TextbookExchange</name>
 	<description>Textbook exchange project</description>
 	<url/>
@@ -27,7 +27,7 @@
 		<url/>
 	</scm>
 	<properties>
-		<java.version>24</java.version>
+		<java.version>17</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -130,6 +130,11 @@
             <groupId>org.thymeleaf</groupId>
             <artifactId>thymeleaf-spring6</artifactId>
         </dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 
 	</dependencies>
 
