--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 spring.application.name=TextbookExchange
 
-spring.config.import=classpath:application-secret.properties
+spring.config.import=classpath:application-secrets.properties
 
 # PostgreSQL DB config
-spring.datasource.url=jdbc:postgresql://textbook-exchange.cncy02qcoyo4.us-east-2.rds.amazonaws.com:5432/textbook-exchange
-spring.datasource.username=esaunders
+# spring.datasource.url=jdbc:postgresql://textbook-exchange.cncy02qcoyo4.us-east-2.rds.amazonaws.com:5432/textbook-exchange
+# spring.datasource.username=esaunders
+spring.datasource.url=jdbc:postgresql://localhost:5432/textbook_exchange
+spring.datasource.username=postgres
 spring.datasource.password=${AWS_PASSWORD}
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
@@ -27,3 +29,10 @@ spring.sql.init.mode=always
 #Security Keys
 JWT_SECRET=${JWT_SECRET}
 EXPIRATION_TIME=${EXPIRATION_TIME}
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=GetTextbooksNow@gmail.com
+spring.mail.password=${EMAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
