Image functionality added

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -153,6 +153,12 @@
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>software.amazon.awssdk</groupId>
+			<artifactId>s3</artifactId>
+			<version>2.25.28</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
