--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,10 +3,10 @@ spring.application.name=TextbookExchange
 spring.config.import=classpath:application-secrets.properties
 
 # PostgreSQL DB config
-# spring.datasource.url=jdbc:postgresql://textbook-exchange.cncy02qcoyo4.us-east-2.rds.amazonaws.com:5432/textbook-exchange
-# spring.datasource.username=esaunders
-spring.datasource.url=jdbc:postgresql://localhost:5432/textbook_exchange
-spring.datasource.username=postgres
+spring.datasource.url=jdbc:postgresql://textbook-exchange.cncy02qcoyo4.us-east-2.rds.amazonaws.com:5432/textbook-exchange
+spring.datasource.username=esaunders
+# spring.datasource.url=jdbc:postgresql://localhost:5432/textbook_exchange
+# spring.datasource.username=postgres
 spring.datasource.password=${AWS_PASSWORD}
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
@@ -36,3 +36,8 @@ spring.mail.username=gettextbooksnow@gmail.com
 spring.mail.password=${EMAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+aws.accessKey=${S3_ACCESS_KEY}
+aws.secretKey=${S3_SECRET_KEY}
+aws.region=us-east-2
+aws.s3.bucket=es-projects-textbook-images
