Switched to https

--- a/.github/workflow/deploy.yml
+++ b/.github/workflow/deploy.yml
@@ -19,7 +19,7 @@ jobs:
           java-version: '17'
 
       - name: Build with Maven
-        run: mvn -B -f backend/pom.xml clean package
+        run: mvn -B -f backend/pom.xml clean package -DskipTests
 
       - name: Copy JAR to EC2
         uses: appleboy/scp-action@v0.1.7
