--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -41,3 +41,7 @@ aws.accessKey=${S3_ACCESS_KEY}
 aws.secretKey=${S3_SECRET_KEY}
 aws.region=us-east-2
 aws.s3.bucket=es-projects-textbook-images
+
+server.ssl.key-store=classpath:keystore.p12
+server.ssl.key-store-password=${AWS_PASSWORD}
+server.ssl.keyStoreType=PKCS12
