--- a/.github/workflow/deploy.yml
+++ b/.github/workflow/deploy.yml
@@ -1,9 +1,46 @@
-- name: Restart Backend on EC2
-  uses: appleboy/ssh-action@v0.1.10
-  with:
-    host: ${{ secrets.EC2_HOST }}
-    username: ${{ secrets.EC2_USER }}
-    key: ${{ secrets.EC2_SSH_KEY }}
-    script: |
-      sudo systemctl daemon-reload
-      sudo systemctl restart textbook
+name: Deploy Spring Boot Backend to EC2
+
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  build-and-deploy:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
+      - name: Build with Maven
+        run: mvn -B -f backend/pom.xml clean package -DskipTests
+
+      - name: Copy JAR to EC2
+        uses: appleboy/scp-action@v0.1.7
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          source: backend/target/TextbookExchange-0.0.1.jar
+          target: /home/${{ secrets.EC2_USER }}/TextbookExchange-0.0.1.jar
+
+      - name: Restart Spring Boot App on EC2
+        uses: appleboy/ssh-action@v0.1.10
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            echo "Reloading systemd and restarting app..."
+            sudo systemctl daemon-reload
+            sudo systemctl restart textbook
+            echo "App restarted. Showing status:"
+            sudo systemctl status textbook --no-pager
+
