Chaning ssl properties

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -45,3 +45,6 @@ aws.s3.bucket=es-projects-textbook-images
 server.ssl.key-store=/home/ec2-user/keystore.p12
 server.ssl.key-store-password=${AWS_PASSWORD}
 server.ssl.keyStoreType=PKCS12
+
+server.ssl.enabled=false
+server.port=8080
