Added api endpoints

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,10 +3,10 @@ spring.application.name=TextbookExchange
 spring.config.import=classpath:application-secrets.properties
 
 # PostgreSQL DB config
-spring.datasource.url=jdbc:postgresql://textbook-exchange.cncy02qcoyo4.us-east-2.rds.amazonaws.com:5432/textbook-exchange
-spring.datasource.username=esaunders
-# spring.datasource.url=jdbc:postgresql://localhost:5432/textbook_exchange
-# spring.datasource.username=postgres
+# spring.datasource.url=jdbc:postgresql://textbook-exchange.cncy02qcoyo4.us-east-2.rds.amazonaws.com:5432/textbook-exchange
+# spring.datasource.username=esaunders
+spring.datasource.url=jdbc:postgresql://localhost:5432/textbook_exchange
+spring.datasource.username=postgres
 spring.datasource.password=${AWS_PASSWORD}
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
