--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -47,4 +47,5 @@ server.ssl.key-store-password=${AWS_PASSWORD}
 server.ssl.keyStoreType=PKCS12
 
 server.ssl.enabled=false
+server.address=0.0.0.0
 server.port=8080
